# vortex-auv-embedded

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md
MPLABProject/ledflashing.X/: ledflashing.mc3  main.c  mcc-manifest-autosave.yml
Telemetry/: README.md
Telemetry/Telemetry_V1.X/: Drivers.mc3  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
Telemetry/src/: main.c
Telemetry_V1.X/: Drivers.mc3
acoustics_firmware/acoustics/: .cproject  .project  acoustics.ioc
bms/bms/: README.md  main.c
desperate_attempt_PWM.X/: definitions.h  device_cache.h  interrupts.h  main.c  same51j20a.h  toolchain_specifics.h
desperate_attempt_PWM.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  configurations.xml  project.xml
desperate_attempt_PWM.X/queuelogs/: debugtool.txt
gripper_17.X/: Makefile  gripper_17.mc3  i2c.c  i2c_master.c  readme.md
gripper_17.X/include/: adc0.h  adc_common.h  can1.h  can_common.h  clock.h  dma.h  gripper.h  i2c.h  i2c_master.h  pm.h  rtc.h  sercom1_i2c.h  sercom3_i2c.h  sercom_i2c_common.h  state_machine.h  system_init.h  tc0.h  tc1.h  tcc.h  (+5 more)
pico_pwm_generator/: CMakeLists.txt  README.md  i2c.c  i2c.h  main.c  pico_pwm_generator.c  pwm.c  pwm.h
psm_orin/: CMakeLists.txt  package.xml
psm_orin/include/: psm_orin_driver.h  psm_orin_node.hpp  psm_orin_ros.hpp
psm_orin/launch/: psm_orin.launch.py
psm_orin/src/: Makefile  main.c  psm_orin_driver.c  psm_orin_node.cpp  psm_orin_ros.cpp  test.c
pwm_generator.X/: readme.md
telemetry_mcu/: shcematic.drawio
temp_telemetry.X/: readme.md
thruster_mcu.X/: main.c  mcc-manifest-autosave.yml
(+434 files in other folders)
